Bug 391847 - 4.1.0 pre-alpha crash in animation
Summary: 4.1.0 pre-alpha crash in animation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Debian stable Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2018-03-14 09:25 UTC by Ahab Greybeard
Modified: 2018-03-14 17:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2018-03-14 09:25:51 UTC
Using krita-4.1.0-pre-alpha-d0e6714-x86_64.appimage under Debian 9 (and also under Windows 10 with nightly build gd0e6714b85), krita can be made to lock-up by deleting a layer from an animation and then pressing the animation play button.
It consumes 100% of one of the cores and has to be killed.

I did this using a freshly made animation and also with the animation provided by Scott Petrovic for https://bugs.kde.org/show_bug.cgi?id=391791

I have also had this crash part way into creating a simple animation.
Comment 1 Dmitry Kazakov 2018-03-14 11:48:47 UTC
Confirm, the bug happens in current master. And I guess it should also be in 4.0
Comment 2 Dmitry Kazakov 2018-03-14 15:07:48 UTC
Git commit 0545db6bf7b9cf061cf3acefb05d48fe76d68499 by Dmitry Kazakov.
Committed on 14/03/2018 at 15:07.
Pushed by dkazakov into branch 'master'.

Fix hangup when trying to run animation cache regeneration with a long stroke running

We should do a "requestStrokeEnd()" operation before starting
the process of cache regeneration.

M  +6    -1    libs/image/kis_update_scheduler.cpp
M  +24   -0    libs/ui/dialogs/KisAsyncAnimationRenderDialogBase.cpp

https://commits.kde.org/krita/0545db6bf7b9cf061cf3acefb05d48fe76d68499
Comment 3 Halla Rempt 2018-03-14 17:49:03 UTC
Git commit 57f92e6e939e1ac452e53ce5713035effdba0223 by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 14/03/2018 at 17:48.
Pushed by rempt into branch 'krita/4.0'.

Fix hangup when trying to run animation cache regeneration with a long stroke running

We should do a "requestStrokeEnd()" operation before starting
the process of cache regeneration.

M  +6    -1    libs/image/kis_update_scheduler.cpp
M  +24   -0    libs/ui/dialogs/KisAsyncAnimationRenderDialogBase.cpp

https://commits.kde.org/krita/57f92e6e939e1ac452e53ce5713035effdba0223