Fix hangup when trying to run animation cache regeneration with a long stroke running

We should do a "requestStrokeEnd()" operation before starting
the process of cache regeneration.

BUG:391847